Cleans up route handlers to be more readable and adds an interface
Signed-off-by: Darshit Chanpura <dchanp@amazon.com>